text-align fixed

--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -82,7 +82,7 @@
   }
   .renderDesc {
     width: 200px;
-    text-align: justify;
+    /* text-align: justify; */
     font-size: medium;
   }
 }
